adding preprocessing R code

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 input/GA_illumina_expression.p162.matrix_non_norm.csv filter=lfs diff=lfs merge=lfs -text
+*.RData filter=lfs diff=lfs merge=lfs -text
